feat: cookbook + weather examples, framework refactor, full docs sweep
Examples
- New `agent-example-cookbook` (scaffolded from archetype, fully local with
  llama3.2:3b primary + qwen2.5:3b fallback, docker compose with mongo + redis
  + ollama + app, 6 skills, 5 tool classes covering all annotation combos,
  RAG + structured output + HITL + RBAC + memory-layers opt-out)
- New `agent-example-weather` (minimal — one WeatherTool with two methods
  hitting Open-Meteo, weather-skill, default-skill with memory-layers opt-out)
- agent-example-fitcoach: bat scripts now self-recover from stale containers,
  Bifrost gets a persistent /app/data volume so virtual keys survive restart,
  CRLF→LF on infra/bifrost/entrypoint.sh, dropped orphan start-docker-*.bat
  files, added .env.example template, fixed .env model name to provider-prefixed
  format (azure/gpt-4o-mini)

Framework refactor
- Eval framework extracted to standalone Gavel project (whole agent-eval/
  module deleted; docs/eval-framework.md removed; README and api-reference
  references cleaned up)
- New `MemoryLayer` enum + per-skill `metadata.memory-layers` opt-out:
  SkillCard now carries Set<MemoryLayer>, MemoryComposer.compose has a
  layer-aware overload, DefaultOrchestratorEngine wires it through
- AgentMemoryAutoConfiguration now @ConditionalOnBean(MongoTemplate /
  StringRedisTemplate) so embedded mode boots cleanly without hard-failing
- ToolRegistry.getToolSpecifications caches LangChain4j ToolSpecification
  list per normalized allowed-tools (was rebuilt on every LLM turn)
- PiiInputGuardrail rewritten to single-pass per pattern with
  Matcher + StringBuilder (was 3× String.replace per match)
- SemanticRoutingService logs use SLF4J placeholders + isXEnabled() guards
- LlmProviderFactory normalizeEndpoint trims slashes without regex
- RagEnricher uses StringBuilder.append chain instead of String.format in loop
- MCP placeholders implemented: ChatMcpTool delegates to OrchestratorEngine
  via AgentRequest.bu